<resources>
    <string name="app_name">ParkHere</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email streetAddress is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_first_name">"Enter First Name"</string>
    <string name="prompt_last_name">"Enter Last Name"</string>
    <string name="prompt_address">"Address"</string>
    <string name="prompt_phone">"Phone Number"</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_of_states">
        <item>  </item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string name="state_selection_prompt">Select State</string>
    <string name="edit_name_text">Name: </string>
    <string name="edit_address_text">Address: </string>
    <string name="edit_state_text">State: </string>
    <string name="edit_country_text">Country: </string>
    <string name="edit_price_text">Price: </string>
    <string name="save_listed_space_changes">Save Changes</string>
    <string name="delete_listed_space">Delete Space</string>
    <string name="cancellation_policy_agreement">I agree to the Cancellation Policy</string>
    <string name="card_payment">Pay with card</string>
    <string name="paypal_payment">Pay with Paypal</string>
    <string name="card_type">Select Card Type: </string>
    <string name="card_number">Card Number: </string>
    <string name="card_expiration_date">Expiration Date: </string>
    <string name="card_cardholder_name">Cardholder Name: </string>
    <string name="card_cv_code">CV Code</string>
    <string name="submit_card_info">Submit Card Info</string>
    <string name="paypal_username">Enter PayPal Username: </string>
    <string name="paypal_password">Enter PayPal Password: </string>
    <string name="verify_paypal">Pay with PayPal</string>
    <string-array name="cancellation_policy_choices">
        <item>Flexible</item>
        <item>Medium</item>
        <item>Strict</item>
    </string-array>
    <string-array name="space_type_choices">
        <item>Compact</item>
        <item>Truck</item>
        <item>Handicapped</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="policy_string">Policy: </string>
    <string name="start_availability_string">Start Availability: </string>
    <string name="end_availability_string">End Availability: </string>
    <string name="goto_space_string">Edit Space</string>
    <string name="save_post_changes">Save Post Changes</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_profile">ProfileActivity</string>
</resources>