<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp" >
    tools:context="com.pfp.parkhere.RegisterActivity">
    <TextView android:id="@+id/RegistrationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="Registration"
        tools:textColor="@android:color/black" />
    <EditText android:id="@+id/first_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_first_name"
        android:layout_below="@id/RegistrationTitle"/>
    <EditText android:id="@+id/last_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_last_name"
        android:layout_below="@+id/first_name_field" />
    <EditText android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:layout_below="@+id/last_name_field"/>
    <EditText android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:layout_below="@+id/password_field"
        android:inputType="textEmailAddress" />
    <EditText android:id="@+id/phone_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_phone"
        android:layout_below="@+id/email_field"
        android:inputType="phone" />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="confirmRegistration"
        android:text="Confirm" />


</RelativeLayout>

